# triqs

./: CMakeLists.txt  README_VIM  run_mako.py
doc/: CMakeLists.txt
doc/installation/: ubuntu.rst
doc/reference/: all_triqs.hpp
doc/reference/gfs/c++/: gf_imfreq.rst  gf_imtime.rst  matsubara_freq_mesh.rst
doc/reference/montecarlo/: full_ref.rst
doc/reference/utilities/: contents.rst  time_pt.rst
pytriqs/: magic.py.in
pytriqs/gf/local/: __init__.py  gf_desc.py
test/triqs/gfs/multivar/: block_of_vertex.cpp
tools/: clang_parser.py  mako_render.py
tools/cpp2doc/: c++2doc.py.in
tools/cpp2doc/mako/: cpp2doc_tools.py  xxx_doc_function.rst
tools/cpp2py/: c++2py.py.in  wrap_generator.py
tools/cpp2py/mako/: xxx_desc.py
triqs/: CMakeLists.txt  gfs.hpp
triqs/arrays/: math_functions2.hpp  math_functions2.mako.hpp  matrix_tensor_proxy.hpp  proxies.hpp  proxies.mako.hpp
triqs/gfs/: gf_classes.hpp  imfreq.hpp
triqs/gfs/block/: block.hpp  block2.hpp  block_gf_iterator.hpp  functions.hpp  map.hpp  mapped_functions.mhpp
triqs/gfs/functions/: fourier_two_variables.cpp  functions.hpp
triqs/gfs/impl/: data_proxies.hpp  defs.hpp  gf.mhpp  gf_expr.hpp  misc.hpp  tools.hpp
triqs/gfs/meshes/: matsubara_freq.hpp
triqs/gfs/multivar/: curry.hpp  gf_curried_view.mhpp  product.hpp
triqs/gfs/onevar/: bz.hpp  cyclic_lattice.hpp  imfreq.hpp  imtime.hpp  legendre.hpp  refreq.hpp  retime.hpp
triqs/gfs/singularity/: fit_tail.cpp  fit_tail.hpp  tail_zero.hpp
triqs/gfs/transform/: fourier_lattice.hpp  fourier_matsubara.hpp  fourier_real.hpp  legendre_matsubara.hpp
triqs/python_tools/converters/: gf.hpp
